<package>
 <name>autoware_topic_name_changer</name>
 <version>0.0.0</version>
 <description>T0D0: Package description</description>
 <maintainer email="200447028@ccmailg.meijo-u.ac.jp">shiryukuroda</maintainer>
 <license>T0D0: License declaration</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>
 <build_depend>rclcpp</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>geometry_msgs</build_depend>
 <build_depend>seosor_msgs</build_depend>

 <export>
   <build_type>ament_cmake</build_type>
 <export>
</package>


